--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <!-- /style -->
 </head>
   <body class="debug">
+    <header id="site_header"></header>
+    
+    <main>
+        <section class="jumbo"></section>
+
+        <section class="portfolio"></section>
+
+        <section class="about"></section>
+
+        <section class="contact_me"></section>
+
+    </main>
+
+    <footer id="site_footer">
+        <div class="footer_top"></div>
+        <div class="footer_bot"></div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
