--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">    
     <!-- /style -->
 </head>
-  <body class="debug">
+  <body class="">
     <header id="site_header"></header>
     
     <main>
@@ -28,20 +28,38 @@
 
         <section class="portfolio">
             <div class="container-fluid container-md container-lg">
-                <h1 class="text-center pt-5 pb-3">portfolio</h1>
+                <h1 class="text-center pb-3">portfolio</h1>
+
+                <div class="shapes-dark d-flex justify-content-center align-items-center pb-3">
+                    <div class="linea-dark"></div>
+                    <i class="fa fa-star fa-2x mx-3" aria-hidden="true"></i>
+                    <div class="linea-dark"></div>
+                </div>
                 <div class="row g-2">
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/cabin.png" alt="">
+                    </div>
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/cake.png" alt="">
+                    </div>
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/circus.png" alt="">
+                    </div>
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/game.png" alt="">
+                    </div>
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/safe.png" alt="">
+                    </div>
 
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid" src="./assets/img/submarine.png" alt="">
+                    </div>
 
                 
 
@@ -52,25 +70,33 @@
         <section class="about">
             <div class="container w-75">
                 <h1 class="text-center pt-5 pb-3 text-white">About</h1>
-                <div class="row g-2">
+                <div class="shapes-white d-flex justify-content-center align-items-center pb-3">
+                    <div class="linea-white"></div>
+                    <i class="fa fa-star fa-2x mx-3" aria-hidden="true"></i>
+                    <div class="linea-white"></div>
+                </div>
+                <div class="row g-2 text-white">
                     <div class="col-12 col-md-6">
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. In ipsam non hic nulla dolor ab est ad dolore corrupti, nam architecto et rem cupiditate amet voluptates assumenda minus porro placeat.
+                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
                         </p>
                     </div>
                     <div class="col-12 col-md-6">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos veritatis quidem nesciunt necessitatibus quaerat, obcaecati sapiente? Nostrum adipisci assumenda laudantium numquam aspernatur, voluptate ratione, et provident beatae fugit est eum.
+                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
                         </p>
                     </div>
-                    <button type="button" class="btn btn-lg text-white m-auto mt-3 w-auto">Success</button>
+                    <button type="button" class="btn btn-lg text-white m-auto mt-3 w-auto"><i class="fa fa-download" aria-hidden="true"></i> Download</button>
                 </div>
             </div>
         </section>
 
         <section class="contact_me">
-            <div class="row">
-                <div class="col"></div>
+            <div class="container w-75">
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+
             </div>
     </section>
 
